finitestate machiena added

--- a/Pages/1Solutions/2Services/2Production/Develope/alldevtechs1_abstract.org
+++ b/Pages/1Solutions/2Services/2Production/Develope/alldevtechs1_abstract.org
@@ -39,7 +39,6 @@ text descrion (Technical, metaphysical, benefit)
 - 10 work max
 - text descrion (Technical, metaphysical, benefit)
 
-
 * Artificial Intelligence
 
 Artificial Intelligence is intelligence demonstrated by a machine.   The branch of computer sciences that studies AI research studies and developes machines to perceive the environment and make adjustments to influence the likelihood of success at achieving goals.  Machines are designed to mimic "cognitive" functions associated with human minds, like "comprehension", or "deductive reasoning".
@@ -105,7 +104,6 @@ Intelligent characters make for better game play.  The user's experience is fami
 *** How it is integrated in VR
 
 We will talk with the concierge — not with commands, menus and quirky key combinations —but using our own human language.   This is Natural Language Processing, a foremost technique for human-to-machine discussions.   
-
 
 * Biometric Software
 
@@ -210,7 +208,6 @@ related blog
 
 
 
-
 * Cryptocurrencies
 
 Cryptocurrency is a a digital asset, secured by cryptography and designed to serve as monetary currency.   "cryptos" are renown for fast, secure, peer-to-peer transactions, developed on "blockchain" technologey.  
@@ -223,9 +220,18 @@ In 2001 economist Edward Castronova estimated virtual world EverQuest's gross na
 
 The benefits of using crypto-currencies beyond secure and fast transacting without a third party is the anonyminity of holdings and fertile ground-work for more open markets.  It doesn't require
 
-
 * Cloud computing
 
+Cloud computing is the remote storage, access and control of computers.   A "cloud" is really just a server, and storing in the cloud merely means you are storing your data on someone elses' hard drive.  For example, iCloud is storing you data on Apple's hardware, instead of your own (locally).
+
+
+
+
+
+
+
+** JB cloud computing graphic
+- idea starter https://xenlife.com.au/wp-content/uploads/What-is-cloud-computing.png
 
 
 *** What the technology is
@@ -257,17 +263,12 @@ The benefits of using crypto-currencies beyond secure and fast transacting witho
 
 * Finite state machines
 
-*** What the technology is
-*** How it is integrated in VR
-*** Why they care (it maks them money)
+finite state machines are made of explicite states.    Imagine a simple video game character can be be in five different finite states, standing, walking, running, attacking, defending.   Each has its own commands and logic framework, when entering, enduring, or departing the state. States have rules tha indicate when they can transition and how.  For example the character must go from "standing" to "walking" before it can enter "running".
 
+A "running" character will be less aware of their surroundings, while the "standing" character will be programmed to be more obervant for another character's attack.   Maybe the character can only enter "defending" for a short period of time, requiring it to enter "attacking" mode, or be injured.   
 
-	⁃	— characters to engage 
-	⁃	— used for implementing AI.
-	⁃	— limitations of engagement - 
-	⁃	— transition period
-	⁃	— not in unreal for engine 4. (because it has stuff it can emulated, but someone else made a plug-in) it is not needed r useful until you use it or need it
-	⁃	
+ Finite State Machines (FSM)s provide broader game-play and character engagement.  FSMs give game-play more depth of character, game-play possibilities, and longer time-in-play rates.  The more engaged a player is the more they will explore, chat, shop, play.   
+
 * AI
 
 	⁃	—  virtual assistant
@@ -346,7 +347,7 @@ The benefits of using crypto-currencies beyond secure and fast transacting witho
 	⁃	Projection mapping - 
 	⁃	** the inverse of virtual reality
 	⁃	
-	⁃	— a strong connection to physical world objects like a building.  people work in it, see it everyday , grandfather helped build it
+	⁃	—a strong connection to physical world objects like a building.  people work in it, see it everyday , grandfather helped build it
 	⁃	— it is the art canvas
 	⁃	— inverse a game engine vr/ar experience as a promotion
 	⁃	— interactive tool, lets people engage
@@ -434,5 +435,7 @@ In the likes of the gaming indsutry, we are indy
 - Find 10 research documents PDFs from credible sources
 - save them in a single folder.
 - they will be linekd to on our "resource center"
+- idea starters for keywords include : Virtual currencies, virtual eonomy, vr growth, economic impact of virtual worlds, 
+
 
  
