--- a/PageTable.org
+++ b/PageTable.org
@@ -174,41 +174,41 @@ gant = gnt chart of campaign
 blg = related blog post
 
 
-| solutions pages       | funx                    | form                | launch  | graphic | Intro | exsum | ft. | ben | investment | rsch | gsusrstry | TA | TAG | propi | distrn | conl | wbd | anim | fstrat | cf | gant | related VR exp | legal | budget | tagline |   |   |    |   |
-| architect             | blueprint               | sketch house        | feb 12  | y       | y     | y     | tfw | tfw | no         | no   | no        |    |     |       |        | no   | y   | no   | no     | no | no   | google blocks  | no    | no     | no      |   |   |    |   |
-| color                 | chose colors            |                     | feb 12  | y       |       | y     |     |     |            |      |           | y  |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| music                 | discover, share, create | moon                | feb 12  |         |       | y     |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| bloomaway             | travel                  |                     | feb 12  | y       | tf    | y     |     |     |            |      |           | y  |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| infinite              | view content            | art gallery         | feb 12  | y       |       | y     | y   |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| facematch             | ad-view verify          |                     | feb 12  | y       |       | y     |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| live stream           | telepresence            |                     | feb 12  |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| nye                   | entertainment           |                     | feb 12  | y       |       | y     |     | y   |            |      | y         | y  | y   |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| live forever          | immortalize             |                     | march 1 |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| enterprise b2b        |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| exhibit               |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| festival              |                         | event               |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| wellness              |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| 3d brand design       |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| anon on blockchain    |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| ar branding           |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| ar reatil             |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| ar event              |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| fifa                  |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| foodman               |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| health care           |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| hotels                |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| in vr                 |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| sports                |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| token sale            |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| encyclopedia          | index information       | visual encyclopedia |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| xr-first website      |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| emacs GUI             |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| torus                 |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| existing int he world |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| bioler room           |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| 3d brand design       |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| city dev              |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| coaches               |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| token sale            |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-| scavenger hunt        |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
-|                       |                         |                     |         |         |       |       |     |     |            |      |           |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   | gs |   |
+| solutions pages       | funx                    | form                | launch  | graphic | Intro | exsum | ft. | ben | investment | rsch | gsusrstry | TA  | TAG | propi | distrn | conl | wbd | anim | fstrat | cf  | gant | related VR exp | legal | budget | tagline |   |   |    |   |
+| architect             | blueprint               | sketch house        | feb 12  | y       | gh    | no    | gh  | gh  | no         | no   | no        | no  | no  |       | no     | no   | y   | no   | no     | no  | no   | google blocks  | no    | no     | no      |   |   |    |   |
+| color                 | chose colors            |                     | feb 12  | y       | gh    | no    | gh  | gh  | no         |      |           | y   |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| music                 | discover, share, create | moon                | feb 12  |         |       | y     |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| bloomaway             | travel                  |                     | feb 12  | y       | tf    | y     |     |     |            |      |           | y   |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| infinite              | view content            | art gallery         | feb 12  | y       | yes   | y     | y   |     |            | yes  | yes       | no  |     | yes   | yes    | no   | yes | yes  | no     | yes | no   |                | yes   | yes    | yes     |   |   |    |   |
+| facematch             | ad-view verify          |                     | feb 12  | y       |       | y     |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| live stream           | telepresence            |                     | feb 12  |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| nye                   | entertainment           |                     | feb 12  | y       |       | y     |     | y   |            |      | y         | y   | y   |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| live forever          | immortalize             |                     | march 1 |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| enterprise b2b        |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| exhibit               |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| festival              | Live Event Marketing    | event               |         | y       | yes   | yes   | no  | no  | no         | yes  | yes       | yes | no  | no    | no     | yes  | no  | no   | yes    | no  | no   | no             | no    | yes    | no      |   |   |    |   |
+| wellness              | Mindfullness in VR      |                     |         | yes     | no    | yes   | no  | no  | no         | yes  | no        | no  | no  | no    | no     | no   | no  | no   | no     | no  | no   | no             | no    | no     | no      |   |   |    |   |
+| 3d brand design       |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| anon on blockchain    |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| ar branding           |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| ar reatil             |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| ar event              |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| fifa                  |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| foodman               |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| health care           |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| hotels                |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| in vr                 |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| sports                |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| token sale            |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| encyclopedia          | index information       | visual encyclopedia |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| xr-first website      |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| emacs GUI             |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| torus                 |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| existing int he world |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| bioler room           |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| 3d brand design       |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| city dev              |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| coaches               |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| token sale            |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+| scavenger hunt        |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   |    |   |
+|                       |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |   |   | gs |   |
