Added Benefit at end

--- a/Pages/1Solutions/1Products/Jan Launch/Architecture/Architecture_finalized.org
+++ b/Pages/1Solutions/1Products/Jan Launch/Architecture/Architecture_finalized.org
@@ -14,5 +14,7 @@ In Virtual space, architects gain a firmer understanding of how the geometrical 
 
 Today, more architects are gaining access to computer aided design (CAD) and computer aided manufacturing (CAM). These programs have introduced a new language of forms and shapes that's too complex for the human brain to project and visualize on its own. Virtual Reality is the technological platform enabling the mind to comprehend these elaborate visual concepts.
 
+Designing in Virtual Reality solidifies many of the assumptions architects must rely on before their next project breaks ground
+
 Architecture is spatial discipline that's found a natural home home inside the Virtual World.
  
