--- a/Pages/1Solutions/1Products/Jan Launch/MusicVR [DONE]/musicxr_goLIVE.org
+++ b/Pages/1Solutions/1Products/Jan Launch/MusicVR [DONE]/musicxr_goLIVE.org
@@ -1,9 +1,27 @@
+* XR Boiler Room 
+** Tagline
+Immersive Music Experience 
 
-**** XR Boiler Room
-Music is often an integral part of social gatherings - whether getting together with friends at a party, going out in the city on a Saturday night, or attending a live event. XR Boiler Room offers users the opportunity to gather for similar purposes inside the new virtual world. People from any location in the physical world can enter Virtual Reality and - through 3D audio - experience any of these music-centric environments. 
+** Abstract
+Socialize, create, and discover music in Virtual Reality
 
-**** XR Studio
-In XR, recording artists, sound engineers, and DJ's have the opportunity to gather in the Virtual Space and share, mix, and blend sounds together. Regardless of experience level, XR Studio is a place for people who enjoy blending and creating sounds together to make art. 
+*** XR Boiler Room
+Music is an integral part of social gatherings - whether getting together with friends at a party, going into the city on a Saturday night, or attending a live event. XR Boiler Room offers users the opportunity to gather for similar purposes inside the new virtual world. With the addition of 3D audio, we can surround ourselves with any auditory experience in any of these music-centric environments. 
 
-**** XR Concerts
+**** Benefits
+Nightclubs, bars, and concert venues extend their reach to remote locations. 
+
+*** XR Studio
+In XR, recording artists, sound engineers, and DJ's have the opportunity to gather in the Virtual world where thety can share, mix, and blend sounds. Regardless of experience level, XR Studio is a place for people who enjoy creating art.
+
+**** Benefits  
+Allow more audio artists to access studio time
+
+*** Music Discovery
+In the Virtual world we blend music discovery with physical exploration, providing a platform for users to travel to various locations around the globe and experience music native to that area. Unrestricted by time and space, our first destination was the moon - allowing users to travel there as an outlet to discover new sounds, songs, and artists.
+
+**** Benefits 
+Intensify the connection between the listener and their discovery of new music by incorporating additional senses into their listening experience
+
+*** XR Concerts
 Fans who are passionate about particular bands may not get the opportunity to see them perform on their world tour - tickets are too expensive, shows aren’t close enough to home, or the venue is sold out. In VR the fan can virtually attend a show anywhere in the world through their VR headset. With 3D audio and access to sold-out stadiums, VR melts the barrier between home and the venue.
